# fast_int

./: .clang-format  .project.vim  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  configure
benchmark/: CMakeLists.txt  benchmark.cpp
cmake/: cmake_uninstall.cmake.in
include/fast_int/: fast_int.hpp
test/: CMakeLists.txt  main.cpp  test.cpp  test_cpp11.cpp
